--- a/privacy.html
+++ b/privacy.html
@@ -6,6 +6,7 @@
   <title>Privacy Policy - Pissed</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
   <script>
     tailwind.config = {
       theme: {
